# backlog-ops

./: .gitignore  README.md  run_focus_sensitive_tests.py
backlogops/: README_pypi.md  include_pypi.md  pyproject.toml  setup.py
backlogops/src/backlogops/: __init__.py  apply_format_rules.py  available_teams.py  available_teams_config.py  available_teams_wizard.py  backlog.py  backlog_helpers.py  backlog_in_release_order.py  backlog_ops_config.py  backlog_ops_wizard.py  backlog_releases.py  backlog_releases_io.py  blo_version_reporter.py  config_file_io.py  console_yes_no_bridge.py  date_ranges.py  demo_backlog.py  estimate_ready_date.py  format_rules.py  io_config.py  io_preset_wizard.py  jira_connect.py  jira_io_config.py  jira_order_releases.py  jira_rank_backlog.py  jira_rank_by_keys.py  jira_rank_move_keys.py  jira_read.py  jira_rename_releases.py  jira_search.py  jira_token.py  jira_update_backlog.py  jira_update_releases.py  jira_wizard.py  jira_write.py  jira_write_fields.py  jira_write_format.py  jira_write_releases.py  key_list_io.py  levels.py  (+16 more)
backlogops/test/test_backlogops/: __init__.py  jira_connect_test.py  jira_rank_helpers.py  jira_write_helpers.py  test_apply_format_rules.py  test_available_teams.py  test_available_teams_config.py  test_available_teams_wizard.py  test_backlog.py  test_backlog_helpers.py  test_backlog_in_release_order.py  test_backlog_ops_config.py  test_backlog_ops_wizard.py  test_backlog_releases.py  test_backlog_releases_io.py  test_blo_version_reporter.py  test_config_file_io.py  test_config_wizard_flow.py  test_console_yes_no_bridge.py  test_date_ranges.py  test_demo_backlog.py  test_estimate_ready_date.py  test_exception_table.py  test_format_rules.py  test_get_available_teams.py  test_get_backlog_ops_config.py  test_io_config.py  test_jira_io_config.py  test_jira_order_releases.py  test_jira_rank_backlog.py  test_jira_rank_by_keys.py  test_jira_rank_move_keys.py  test_jira_read.py  test_jira_release_update.py  test_jira_release_write.py  test_jira_rename_releases.py  test_jira_search.py  test_jira_token.py  test_jira_update_backlog.py  test_jira_wizard.py  (+20 more)
backlogops_cli/: README_pypi.md  include_pypi.md  pyproject.toml  setup.py
backlogops_cli/src/backlogops_cli/: __init__.py  __main__.py  _command_io.py  _migrate_warn.py  _wizard_io.py  add_releases_to_jira.py  add_to_jira.py  adjust_release_content.py  bloc_version_reporter.py  config_wizard.py  convert.py  demo_backlog.py  encrypt_token_file.py  estimate_ready_date.py  extract_keys.py  jira_fields.py  list.py  migrate_cfg.py  order.py  order_by_deps.py  order_by_keys.py  order_by_release.py  order_releases.py  order_releases_in_jira.py  plan_release_dates.py  preset_wizard.py  rank_in_jira.py  read_jira.py  rename_releases_in_jira.py  teams_wizard.py  update_backlog_in_jira.py  update_releases_in_jira.py  version.py
backlogops_cli/test/test_backlogops_cli/: __init__.py  conftest.py  test_add_releases_to_jira.py  test_add_to_jira.py  test_adjust_release_content.py  test_bloc_version_reporter.py  test_command_io.py  test_config_wizard.py  test_convert.py  test_demo_backlog.py  test_encrypt_token_file.py  test_estimate_ready_date.py  test_extract_keys.py  (+19 more)
backlogops_gui/: README_pypi.md  include_pypi.md  pyproject.toml  setup.py
(+106 files in other folders)
