[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backlogops-gui"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "Graphical user interface for backlog operations."
readme = "README_pypi.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
    "backlog", "release planning", "agile", "scrum", "scheduling",
    "roadmap", "project management", "product owner", "product management"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed"
]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/tom-bjorkholm/backlog-ops"
"Source code" = "https://github.com/tom-bjorkholm/backlog-ops"
"Documentation" = "https://github.com/tom-bjorkholm/backlog-ops/blob/master/doc/using_backlogops/README.md"

[project.gui-scripts]
backlogops-gui = "backlogops_gui.application:main"
